Fix scrollbar on general_form_page

--- a/static/styles/general_form_page.css
+++ b/static/styles/general_form_page.css
@@ -1,13 +1,13 @@
 html,
 body {
-    height: 100%;
+    height: 100vh;
     margin: 0;
 }
 
 .content-wrapper {
     float: left;
     width: 65%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     position: absolute;
     border-radius: 20px;
@@ -168,11 +168,12 @@ body {
     width: 40%;
     height: 100%;
     flex: 1;
+    overflow: hidden;
 }
 
 .graphic img {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     object-fit: cover;
 }
 
